#ifndef CWA_PROCESS_DATA_PROCESS_H
#define CWA_PROCESS_DATA_PROCESS_H

namespace cwa {

namespace process {

  class DataProcess {
  public:
    DataProcess();

  private:

  };

}

}

#endif // CWA_PROCESS_DATA_PROCESS_H
